[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Enemy/Beam.png" type="Texture" id=1]
[ext_resource path="res://Music and Sounds/SFX/Wav Files/Laser.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/Enemy/special_attack/Particles2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hitboxes_and_Hurtboxes/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Enemy/special_attack/Laser.gd" type="Script" id=5]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="RayShape2D" id=2]
length = 376.0

[node name="Laser" type="Node2D"]
modulate = Color( 0.0862745, 0.509804, 0.635294, 1 )
script = ExtResource( 5 )
seconds_to_live = 6.95

[node name="Beam" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 1 )
scale = Vector2( 1.08, 0.380952 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -12 )
region_enabled = true
region_rect = Rect2( -0.467, 0.143, 100, 21.249 )

[node name="LaserRaycast" type="RayCast2D" parent="."]
position = Vector2( -1, 0 )
enabled = true
cast_to = Vector2( 1000, 0 )
collide_with_areas = true

[node name="Hitbox" parent="LaserRaycast" instance=ExtResource( 4 )]
collision_mask = 4
damage = 2
knockback = 200

[node name="CollisionShape2D" parent="LaserRaycast/Hitbox" index="0"]
position = Vector2( 1, 0 )
rotation = -1.5708
shape = SubResource( 2 )

[node name="End" type="Position2D" parent="."]
position = Vector2( 112, 0 )

[node name="Particles2D" parent="End" instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]

[node name="LaserSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -25.0
bus = "SFX"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="LaserRaycast/Hitbox"]
